added footer as well as edits to stylesheet

--- a/contact.html
+++ b/contact.html
@@ -667,31 +667,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a href="index.html" class="navbar-brand ">
-                            <img src="images/footer-logo.png" alt="footer logo">
-                            <svg id="Layer_2-1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145.26 32">
-                                <g id="Layer_2-2" data-name="Layer 2">
-                                    <g id="Layer_1-2-2" data-name="Layer 1-2">
-                                        <path class="cls-1" d="M51.36,6.38V26.82H47.77V6.38H42.29V3H56.82V6.38Z" />
-                                        <path class="cls-1" d="M58.29,11.79h3.47v1.35a6.66,6.66,0,0,1,1.7-1.38,4,4,0,0,1,1.79-.38,5.68,5.68,0,0,1,2.87.89l-1.59,3.18a3.34,3.34,0,0,0-1.93-.71q-2.83,0-2.84,4.29v7.79H58.29Z"
-                                        />
-                                        <path class="cls-1" d="M69.12,19.2a7.48,7.48,0,0,1,2.33-5.54,8.23,8.23,0,0,1,11.39,0,7.64,7.64,0,0,1,2.31,5.64A7.64,7.64,0,0,1,82.82,25a8,8,0,0,1-5.75,2.26A7.66,7.66,0,0,1,71.4,25,7.78,7.78,0,0,1,69.12,19.2Zm3.55.06a5.11,5.11,0,0,0,1.2,3.57,4.25,4.25,0,0,0,3.26,1.32,4.19,4.19,0,0,0,3.25-1.31,4.9,4.9,0,0,0,1.22-3.5,4.9,4.9,0,0,0-1.22-3.5,4.61,4.61,0,0,0-6.48,0A4.82,4.82,0,0,0,72.67,19.26Z"
-                                        />
-                                        <path class="cls-1" d="M92.29,32H88.82V11.79h3.47v1.64a6.43,6.43,0,0,1,4.66-2,6.51,6.51,0,0,1,5.11,2.28,8.24,8.24,0,0,1,2,5.73,8.15,8.15,0,0,1-2,5.63,6.61,6.61,0,0,1-9.33.57q-.24-.21-.46-.45Zm8.26-12.6a5.21,5.21,0,0,0-1.17-3.52,3.82,3.82,0,0,0-3-1.37,4,4,0,0,0-3.1,1.33,5,5,0,0,0-1.19,3.48,5.15,5.15,0,0,0,1.19,3.49,3.88,3.88,0,0,0,3.09,1.34,3.79,3.79,0,0,0,3-1.35A5,5,0,0,0,100.55,19.4Z"
-                                        />
-                                        <path class="cls-1" d="M107.25,5.55a2.26,2.26,0,0,1,4.52,0,2.22,2.22,0,0,1-.67,1.61,2.14,2.14,0,0,1-1.59.66,2.19,2.19,0,0,1-1.6-.66A2.23,2.23,0,0,1,107.25,5.55Zm4,6.24v15h-3.47v-15Z"
-                                        />
-                                        <path class="cls-1" d="M127.33,12.44v4.62a8.32,8.32,0,0,0-2.13-2A4.12,4.12,0,0,0,123,14.5a4.32,4.32,0,0,0-3.26,1.37,4.85,4.85,0,0,0-1.29,3.44,4.92,4.92,0,0,0,1.25,3.48A4.22,4.22,0,0,0,123,24.15a4.41,4.41,0,0,0,2.21-.54,8.56,8.56,0,0,0,2.17-2v4.58a9.08,9.08,0,0,1-4.22,1.09A8.11,8.11,0,0,1,117.27,25a7.52,7.52,0,0,1-2.34-5.63,7.62,7.62,0,0,1,2.38-5.68,8,8,0,0,1,5.83-2.31A8.67,8.67,0,0,1,127.33,12.44Z"
-                                        />
-                                        <path class="cls-1" d="M141.78,11.79h3.48v15h-3.48V25.25a6.68,6.68,0,0,1-9.45.1L132,25a8.35,8.35,0,0,1-2-5.74,8.1,8.1,0,0,1,2-5.63,6.52,6.52,0,0,1,5.06-2.25,6.4,6.4,0,0,1,4.71,2.16Zm-8.24,7.47a5.23,5.23,0,0,0,1.15,3.52,3.79,3.79,0,0,0,3,1.37,4,4,0,0,0,3.11-1.32,5.11,5.11,0,0,0,1.2-3.49,5.11,5.11,0,0,0-1.19-3.49,3.93,3.93,0,0,0-3.08-1.34,3.84,3.84,0,0,0-3,1.36A5,5,0,0,0,133.54,19.26Z"
-                                        />
-                                        <path class="cls-2" d="M34.74,12.81,18.77,15l3.62,3.62C19.16,24.79,12.65,28.81,0,31.31c11.61,2,19.84-.41,28.89-6.21l3.68,3.68Z"
-                                        />
-                                        <path class="cls-2" d="M26.59,10.92V1a1,1,0,0,0-1-1H21.71a1,1,0,0,0-1,1V11.72Z" />
-                                        <path class="cls-2" d="M5.88,12a1,1,0,0,0-1-1H1a1,1,0,0,0-1,1V28.48c2.13-.42,4.08-.89,5.88-1.4Z" />
-                                        <path class="cls-2" d="M16.23,21.54V6a1,1,0,0,0-1-1H11.36a1,1,0,0,0-1,1V24.92A28.68,28.68,0,0,0,16.23,21.54Z" />
-                                    </g>
-                                </g>
-                            </svg>
+                            <p>Web Marketing Solutions</p>
                         </a>
                         <!-- End of .navbar-brand -->
                     </div>
@@ -700,18 +676,15 @@
                     <div class="col-md-8 ml-md-auto">
                         <ul class="navbar-nav navbar-expand-md">
                             <li class="nav-item">
-                                <a href="case-studies.html" class="nav-link">Case Studies</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="our-work.html" class="nav-link">Our Work</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="pricing.html" class="nav-link">Pricing</a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="blog.html" class="nav-link">Blog</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
+                                <a href="career.html" class="nav-link">Career</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="about-us.html" class="nav-link">About Us</a>
+                            </li>
+                            <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact Us</a>
                             </li>
                         </ul>
@@ -725,7 +698,7 @@
 
             <div class="footer-mid">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <ul class="footer-mid-nav">
                             <li class="nav-item">Services</li>
                             <li class="nav-item">
@@ -738,37 +711,22 @@
                                 <a class="nav-link" href="social-media-marketing.html">Social Media Marketing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="email-marketing.html">Email Marketing</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="web-development.html">Website Development</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="reporting.html">Reporting</a>
                             </li>
                         </ul>
                         <!-- End of .footer-mid-nav -->
                     </div>
                     <!-- End of .col-dm-3 -->
 
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <ul class="navbar-nav footer-mid-nav">
                             <li class="nav-item">About Us</li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">Overview</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="why-us.html">Why us</a>
-                            </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="team.html">Team</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="client-reviews.html">Client Reviews</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="awards-and-recognitions.html">Awards &amp; Recognitions</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="career.html">Career</a>
                             </li>
@@ -777,30 +735,7 @@
                     </div>
                     <!-- End of .col-dm-3 -->
 
-                    <div class="col-md-3">
-                        <ul class="footer-mid-nav partners-list">
-                            <li class="nav-item">Partners</li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">
-                                    <img src="images/partner1.png" alt="partners">
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">
-                                    <img src="images/partner2.png" alt="partners">
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:void(0)">
-                                    <img src="images/partner3.png" alt="partners">
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- End of .footer-mid-nav -->
-                    </div>
-                    <!-- End of .col-dm-3 -->
-
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <ul class="footer-mid-nav footer-newsletter">
                             <li class="nav-item">Newsletter</li>
                             <li class="nav-item">
@@ -811,7 +746,8 @@
                                         <button type="submit">
                                             <svg id="Layer_11" data-name="Layer 11" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25.19 17.71">
                                                 <path class="cls-1" d="M311,387.93a.89.89,0,0,0-1.27,1.26l6.44,6.44H295a.89.89,0,0,0-.89.89.9.9,0,0,0,.89.9h21.24l-6.44,6.42a.91.91,0,0,0,0,1.27.89.89,0,0,0,1.27,0l8-8a.87.87,0,0,0,0-1.25Z"
-                                                    transform="translate(-294.08 -387.67)" /> </svg>
+                                                    transform="translate(-294.08 -387.67)" />
+                                            </svg>
                                         </button>
                                     </div>
                                     <!-- End of .form-group -->
@@ -830,7 +766,7 @@
             <div class="footer-bottom">
                 <div class="row align-text-center justify-content-between">
                     <div class="col-md-auto  text-left">
-                        <p>&copy; 2018 All rights reserved by Your Company</p>
+                        <p>&copy; 2018 All rights reserved by Web Marketing Solutions</p>
                         <div class="footer-bottom-links">
                             <a href="privacy-policy.html">Privacy Policy</a>
                             <a href="terms-conditions.html">Terms &amp; Condition</a>
