--- a/search-engine-optimization.html
+++ b/search-engine-optimization.html
@@ -507,7 +507,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-heading text-center">
-                        <h2>How Long Will It Take For Me To <span>Rank</span> On the First Page Of <span>Google</span>?</h3>
+                        <h2>How Long Will It Take My Business To <span>Rank</span> On the First Page Of <span>Google</span>?</h3>
                         <p>At WMS we generally agree with the consensus of experts within the industry that it will usually take 4-6 months rank well in organic listings on Google.</p>
                     </div>
                     <ul class="howLongSeo">
