--- a/under-construction.html
+++ b/under-construction.html
@@ -97,7 +97,7 @@
                             <div class="dropdown-menu" aria-labelledby="serviceDropdown">
                                 <a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a>
                                 <a class="dropdown-item" href="pay-per-click.html">Pay-Per-Click</a>
-                                <a class="dropdown-item" href="under-construction.html">Social Media Marketing</a>
+                                <a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a>
                                 <a class="dropdown-item" href="web-development.html">Web Development</a>
                             </div>
                         </li>
@@ -161,8 +161,8 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-sm-4 text-sm-left">
-                        <a class="navbar-brand" href="index.html">
-                            <p>Web Marketing Solutions</p>
+                        <a href="index.html">
+                          <img class="navbarLogo" src="./media/mainLogo.png" alt="">
                         </a>
                         <!-- End of .navbar-brand -->
                     </div>
@@ -201,7 +201,7 @@
                             <a class="nav-link" href="pay-per-click.html">Pay-Per-Click</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="under-construction.html">Social Media Marketing</a>
+                            <a class="nav-link" href="social-media-marketing.html">Social Media Marketing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="web-development.html">Web Development</a>
