--- a/contact.html
+++ b/contact.html
@@ -161,41 +161,17 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-sm-4 text-sm-left">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="images/brand-logo.png" alt="brand logo">
-                            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 145.26 32">
-                                <g id="Layer_2" data-name="Layer 2">
-                                    <g id="Layer_1-2" data-name="Layer 1-2">
-                                        <path class="cls-1" d="M51.36,6.38V26.82H47.77V6.38H42.29V3H56.82V6.38Z" />
-                                        <path class="cls-1" d="M58.29,11.79h3.47v1.35a6.66,6.66,0,0,1,1.7-1.38,4,4,0,0,1,1.79-.38,5.68,5.68,0,0,1,2.87.89l-1.59,3.18a3.34,3.34,0,0,0-1.93-.71q-2.83,0-2.84,4.29v7.79H58.29Z"
-                                        />
-                                        <path class="cls-1" d="M69.12,19.2a7.48,7.48,0,0,1,2.33-5.54,8.23,8.23,0,0,1,11.39,0,7.64,7.64,0,0,1,2.31,5.64A7.64,7.64,0,0,1,82.82,25a8,8,0,0,1-5.75,2.26A7.66,7.66,0,0,1,71.4,25,7.78,7.78,0,0,1,69.12,19.2Zm3.55.06a5.11,5.11,0,0,0,1.2,3.57,4.25,4.25,0,0,0,3.26,1.32,4.19,4.19,0,0,0,3.25-1.31,4.9,4.9,0,0,0,1.22-3.5,4.9,4.9,0,0,0-1.22-3.5,4.61,4.61,0,0,0-6.48,0A4.82,4.82,0,0,0,72.67,19.26Z"
-                                        />
-                                        <path class="cls-1" d="M92.29,32H88.82V11.79h3.47v1.64a6.43,6.43,0,0,1,4.66-2,6.51,6.51,0,0,1,5.11,2.28,8.24,8.24,0,0,1,2,5.73,8.15,8.15,0,0,1-2,5.63,6.61,6.61,0,0,1-9.33.57q-.24-.21-.46-.45Zm8.26-12.6a5.21,5.21,0,0,0-1.17-3.52,3.82,3.82,0,0,0-3-1.37,4,4,0,0,0-3.1,1.33,5,5,0,0,0-1.19,3.48,5.15,5.15,0,0,0,1.19,3.49,3.88,3.88,0,0,0,3.09,1.34,3.79,3.79,0,0,0,3-1.35A5,5,0,0,0,100.55,19.4Z"
-                                        />
-                                        <path class="cls-1" d="M107.25,5.55a2.26,2.26,0,0,1,4.52,0,2.22,2.22,0,0,1-.67,1.61,2.14,2.14,0,0,1-1.59.66,2.19,2.19,0,0,1-1.6-.66A2.23,2.23,0,0,1,107.25,5.55Zm4,6.24v15h-3.47v-15Z"
-                                        />
-                                        <path class="cls-1" d="M127.33,12.44v4.62a8.32,8.32,0,0,0-2.13-2A4.12,4.12,0,0,0,123,14.5a4.32,4.32,0,0,0-3.26,1.37,4.85,4.85,0,0,0-1.29,3.44,4.92,4.92,0,0,0,1.25,3.48A4.22,4.22,0,0,0,123,24.15a4.41,4.41,0,0,0,2.21-.54,8.56,8.56,0,0,0,2.17-2v4.58a9.08,9.08,0,0,1-4.22,1.09A8.11,8.11,0,0,1,117.27,25a7.52,7.52,0,0,1-2.34-5.63,7.62,7.62,0,0,1,2.38-5.68,8,8,0,0,1,5.83-2.31A8.67,8.67,0,0,1,127.33,12.44Z"
-                                        />
-                                        <path class="cls-1" d="M141.78,11.79h3.48v15h-3.48V25.25a6.68,6.68,0,0,1-9.45.1L132,25a8.35,8.35,0,0,1-2-5.74,8.1,8.1,0,0,1,2-5.63,6.52,6.52,0,0,1,5.06-2.25,6.4,6.4,0,0,1,4.71,2.16Zm-8.24,7.47a5.23,5.23,0,0,0,1.15,3.52,3.79,3.79,0,0,0,3,1.37,4,4,0,0,0,3.11-1.32,5.11,5.11,0,0,0,1.2-3.49,5.11,5.11,0,0,0-1.19-3.49,3.93,3.93,0,0,0-3.08-1.34,3.84,3.84,0,0,0-3,1.36A5,5,0,0,0,133.54,19.26Z"
-                                        />
-                                        <path class="cls-2" d="M34.74,12.81,18.77,15l3.62,3.62C19.16,24.79,12.65,28.81,0,31.31c11.61,2,19.84-.41,28.89-6.21l3.68,3.68Z"
-                                        />
-                                        <path class="cls-2" d="M26.59,10.92V1a1,1,0,0,0-1-1H21.71a1,1,0,0,0-1,1V11.72Z" />
-                                        <path class="cls-2" d="M5.88,12a1,1,0,0,0-1-1H1a1,1,0,0,0-1,1V28.48c2.13-.42,4.08-.89,5.88-1.4Z" />
-                                        <path class="cls-2" d="M16.23,21.54V6a1,1,0,0,0-1-1H11.36a1,1,0,0,0-1,1V24.92A28.68,28.68,0,0,0,16.23,21.54Z" />
-                                    </g>
-                                </g>
-                            </svg>
+                        <a href="index.html">
+                          <img class="navbarLogo" src="./media/mainLogo.png" alt="">
                         </a>
                         <!-- End of .navbar-brand -->
                     </div>
                     <!-- End of .col-4 -->
 
                     <div class="ht-right col-sm d-flex align-items-center justify-content-center justify-content-sm-end">
-                        <a href="tel:7021455847" class="contact-numb">
+                        <a href="tel:+12254059790" class="contact-numb">
                             <i class="grad-icon icon-Phone"></i>
-                            <span>(702) 145 5847</span>
+                            <span>(225) 405 9790</span>
                         </a>
 
                         <a class="primary-btn" href="javascript:void(0)" data-toggle="modal" data-target="#contact-form-modal">Free SEO Audit</a>
@@ -506,7 +482,7 @@
     </div>
     <!-- End of .main -->
 
-    <!-- contact-form-modal starts
+<!-- contact-form-modal starts
     ============================================ -->
     <div class="footer-modal modal fade" id="contact-form-modal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel"
         aria-hidden="true">
@@ -578,26 +554,12 @@
                                                 <label class="form-check-label" for="form-check-input-5">
                                                     <span>Social Media Marketing</span>
                                                 </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-6" name="multicheck[]" value="Email Marketing">
-                                                <label class="form-check-label" for="form-check-input-6">
-                                                    <span>Email Marketing</span>
-                                                </label>
-                                            </div>
+                                            </div>-
                                             <!-- End of .form-check -->
                                             <div class="form-check form-check-inline col-sm-6 col-xl-4">
                                                 <input class="form-check-input" type="checkbox" id="form-check-input-7" name="multicheck[]" value="Web Development">
                                                 <label class="form-check-label" for="form-check-input-7">
                                                     <span>Web Development</span>
-                                                </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-8" name="multicheck[]" value="Reporting">
-                                                <label class="form-check-label" for="form-check-input-8">
-                                                    <span>Reporting</span>
                                                 </label>
                                             </div>
                                             <!-- End of .form-check -->
@@ -607,7 +569,7 @@
                                     <!-- End of .col-md-12 -->
 
                                     <div class="form-group col-md-12">
-                                        <textarea name="message" class="form-control" id="ff-textarea2" rows="3" placeholder="Message"></textarea>
+                                        <textarea name="message" class="form-control" id="ff-textarea" rows="3" placeholder="Message"></textarea>
                                     </div>
                                     <!-- End of .form-group -->
                                 </div>
@@ -619,17 +581,14 @@
                                 <div class="address">
                                     <address>
                                         <p>Location:
-                                            <span>Ap # 867-859 Sit Rd.
-                                                <br> Azusa New York 39531</span>
+                                            <span>6814 Lauderwick Ct
+                                                <br> Katy, TX - 77450</span>
                                         </p>
                                         <p>Phone:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
-                                        </p>
-                                        <p>Fax:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
+                                            <a href="tel:793151-6230">(225) 405-9790</a>
                                         </p>
                                         <p>Email:
-                                            <a href="mailto:support@domain.com">support@domain.com</a>
+                                            <a href="mailto:support@domain.com">Contact@webmarketingsolutions.com</a>
                                         </p>
                                     </address>
                                 </div>
