--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     ======================================== -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/tropica-caviar-icons.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    
 
     <!-- css links
     ======================================== -->
@@ -97,7 +97,7 @@
                             <div class="dropdown-menu" aria-labelledby="serviceDropdown">
                                 <a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a>
                                 <a class="dropdown-item" href="pay-per-click.html">Pay-Per-Click</a>
-                                <a class="dropdown-item" href="under-construction.html">Social Media Marketing</a>
+                                <a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a>
                                 <a class="dropdown-item" href="web-development.html">Web Development</a>
                             </div>
                         </li>
@@ -201,7 +201,7 @@
                             <a class="nav-link" href="pay-per-click.html">Pay-Per-Click</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="under-construction.html">Social Media Marketing</a>
+                            <a class="nav-link" href="social-media-marketing.html">Social Media Marketing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="web-development.html">Web Development</a>
@@ -221,8 +221,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="banner-content col-lg-5 col-xl-6 text-lg-left text-center">
-                        <h1>Appear in the <span>1<sup>st</sup></span> Place
-                            <br> of the Search Results</h1>
+                        <h1>A Dependable <span>SEO Company</span> in Houston</h1>
                         <p>Be seen by customers at the very moment that they’re searching on Google for the things you offer.</p>
                         <a class="primary-btn" href="contact.html">Get Started Today</a>
                     </div>
@@ -370,7 +369,7 @@
                             <div class="col-md text-center text-md-left">
                                 <div class="text-content">
                                     <h3>Search Engine Optimization</h3>
-                                    <p>Industry leader <a href="https://www.moz.com" target="_blank">Moz</a> define SEO as the practice of increasing both the quality and quantity of website traffic, as well as exposure to your brand, through non-paid (also known as "organic") search engine results.  Sounds easy right?  Wrong!  Google and other search engines rank websites based on a multitude of factors, and with the search algorithms changing everyday, sometimes it can be hard to stay focused and figure out what is actually working.</p>
+                                    <p>Industry leader <a href="https://www.moz.com" target="_blank">Moz</a> defines SEO as the practice of increasing both the quality and quantity of website traffic, as well as exposure to your brand, through non-paid (also known as "organic") search engine results.  Sounds easy right?  Wrong!  Google and other search engines rank websites based on a multitude of factors, and with the search algorithms changing everyday, sometimes it can be hard to stay focused and figure out what is actually working.</p>
 
                                     <p>SEO can be challenging at times because Google doesn’t explicitly state what to do to rank well.  This is why ranking well can be difficult.  WMS implements SEO paradigms that work and have been tested in the past  and have been proven to work.</p>
                                 </div>
@@ -491,7 +490,7 @@
                             <a href="search-engine-optimization.html" class="content text-center equalHeight">
                                 <i class="grad-icon icon-Loupe"></i>
                                 <h3>Search Engine Optimization</h3>
-                                <p>Strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
+                                <p>Optimized organics is the back bone to every online marketing strategies</p>
                             </a>
                             <!-- End of .content -->
                         </div>
@@ -501,7 +500,7 @@
                             <a href="pay-per-click.html" class="content text-center equalHeight">
                                 <i class="grad-icon icon-Cursor"></i>
                                 <h3>Pay-Per-Click</h3>
-                                <p>strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
+                                <p>Google Ads allows for hyper targeted and high converting advertisements</p>
                             </a>
                             <!-- End of .content -->
                         </div>
@@ -511,17 +510,17 @@
                             <a href="social-media-marketing.html" class="content text-center equalHeight">
                                 <i class="grad-icon icon-Users"></i>
                                 <h3>Social Media Marketing</h3>
-                                <p>strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
+                                <p>Spread brand awareness and content through different social media platforms</p>
                             </a>
                             <!-- End of .content -->
                         </div>
                         <!-- End of .item -->
 
                         <div class="item item4">
-                            <a href="email-marketing.html" class="content text-center equalHeight">
+                            <a href="under-construction.html" class="content text-center equalHeight">
                                 <i class="grad-icon icon-Mail"></i>
                                 <h3>Email Marketing</h3>
-                                <p>strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
+                                <p>Email marketing remains the highest converting and cheapest form of advertising to this day</p>
                             </a>
                             <!-- End of .content -->
                         </div>
@@ -531,17 +530,7 @@
                             <a href="web-development.html" class="content text-center equalHeight">
                                 <i class="grad-icon icon-Laptop"></i>
                                 <h3>Website Development</h3>
-                                <p>strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
-                            </a>
-                            <!-- End of .content -->
-                        </div>
-                        <!-- End of .item -->
-
-                        <div class="item item6">
-                            <a href="reporting.html" class="content text-center equalHeight">
-                                <i class="grad-icon icon-Pillow-Chart---1"></i>
-                                <h3>Reporting</h3>
-                                <p>strud exerci oullamcorper suscipibor nisl ut aliquip ex ecomhconsequat. Dus autem vel</p>
+                                <p>As your website is where most of your traffic will route to (top of the funnel), a nice website is imperative</p>
                             </a>
                             <!-- End of .content -->
                         </div>
@@ -555,98 +544,30 @@
         </section>
         <!-- End of .services -->
 
-        <!-- roi-driven-optimization starts
-    ============================================ -->
-        <section class="section roi-driven-optimization">
+        <section class="section content">            
             <div class="container">
-                <div class="section-heading text-center">
-                    <h2>We Provide
-                        <span>ROI Driven</span> Search Engine Optimization
-                    </h2>
-                    <p>We ensure that your website gets valuble traffics that converts into leads</p>
-                </div>
-                <!-- End of .section-heading -->
-
-                <div class="content-block">
-                    <div class="row align-items-center">
-                        <div class="col-lg-5">
-                            <h3>Stay on the Top of Search Results</h3>
-                            <p>The key performance indicator to any SEO campaign is how many page one slots do you have, bottom line.  WMS offers a trackable and measurable SEO experience so you know exactly how your campaign is performing at all times.</p>
-                            <ul class="search-list-box">
-                                <li>
-                                    <i class="fas fa-layer-group"></i> Vast array of services
-                                </li>
-                                <li>
-                                    <i class="fas fa-file-invoice-dollar"></i> Accurate Reporting
-                                </li>
-                                <li>
-                                    <i class="fas fa-users"></i> Experienced and knowledgeable team
-                                </li>
-                                <li>
-                                    <i class="fas fa-laptop-code"></i> Awesome Web Designs
-                                </li>
-                            </ul>
-                            <!-- End of .search-list-box -->
-                            <a href="contact.html" class="primary-btn">Get Started Today</a>
-                        </div>
-                        <!-- End of col-ms-5 -->
-                        <div class="col-lg-6 ml-auto  img-container pl-lg-0">
-                            <img src="images/browser.jpg" alt="browser image">
-                        </div>
-                        <!-- End of .col-lg-7 -->
-
-                    </div>
-                    <!-- End of .row -->
-                </div>
-                <!-- End of .content-block -->
+                <h2>We Offer Web Design and SEO Services</h2>
+                <p>In Order to drive business you have to be found, you probably found us by typing in Houston SEO or Houston Web Design. Our SEO/L process has already proven to you, just by getting you this far that it works. We provide thorough due diligence and research with each job we take on, we study your industry and learn it better than we know our own. It is when we understand your industry that we can make the consciousness decisions to meet your digital marketing goals.</p>
+                <br>
+                <h2>Houston Web Design</h2>
+                <p>We noticed in order to receive optimal results with SEO, that we must start with a brand new website. We begin with a light weight wireframe, which is the blueprint of your website, from there we will then create a full mockup or an upscale model with full colors and media. Once you have approved those steps, we will finally  begin to develop your website using html and bootstrap for optimal performance.</p>
+                <br>
+                <p>Your website is the most vital part of your digital marketing campaign, that is because your website will receive the majority of the traffic from all you different digital marketing channels, it is the top of your marketing funnel. Here is what Google does when its crawls and ranks your website: </p>
+                <br>
+                <ul>
+                    <li>Google discovers your website</li>
+                    <li>Google looks your title</li>
+                    <li>Google looks at your description</li>
+                    <li>Google looks at your image ALT text</li>
+                    <li>Google looks at your content</li>   
+                </ul>
+                <br>
+                <p>Learning about all the ways that google crawls through your website can be overwhelming, you can learn about all that right <a href="https://neilpatel.com/blog/the-way-google-scans/" target="_blank">here</a>. That is why you should let us help you with all your web design and development needs in Houston.</p>
+                <br>
+                <h2>SEO Company That Differs From the Competition</h2>
+                <p>Web Marketing Solutions offers an array of services in Houston from SEO, Web Development, Social Media Marketing, and Google Ads.  Choosing a digital marketing agency in Houston can be difficult, hiring a third party digital marketing agency to advertise your business is a big decision.  Thats why you must pick a dependable SEO company in Houston that offers expert SEO services at a competitive and affordable price.  We began our company after noticing our former company was spending an arm and a leg on a defective digital marketing agency. Thats when we saw an opening to offer businesses a competitive, dependable and affordable Digital Marketing services in Houston.</p>
             </div>
-            <!-- End .of container -->
         </section>
-        <!-- End of .roi-driven-optimization -->
-
-         <!-- Mission starts
-    ============================================ -->
-    <section class="mission">
-        <div class="gallery-container">
-            <img src="images/mission/mission.jpg" alt="mission image" class="img-fluid">
-        </div>
-        <!-- End of .gallery-container -->
-
-        <div class="text-content section  grey-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 ml-auto text-left">
-                        <div class="section-heading text-left">
-                            <h2>Blast Off Your Digital Marketing Campaign
-                                <span>and Dominate The Competition</span>
-                            </h2>
-                        </div>
-                        <!-- End of .section-heading -->
-                        <p>Our full suite of digital marketing services allow your business to pick which services are needed that way you only get what you need</p>
-
-                        <ul class="mission-list-box">
-                            <li>
-                                <i class="icon-Tick"></i> 20 years combined experience
-                            </li>
-                            <li>
-                                <i class="icon-Tick"></i> Small Business
-                            </li>
-                            <li>
-                                <i class="icon-Tick"></i> Solidified
-                            </li>
-                        </ul>
-                        <!-- End of .mission-list-box -->
-                        <a href="about-us.html" class="primary-btn">Learn About Us</a>
-                    </div>
-                    <!-- End of .col-lg-6 -->
-                </div>
-                <!-- End of .row -->
-            </div>
-            <!-- End of .container -->
-        </div>
-        <!-- End of .text-content -->
-    </section>
-    <!-- End of .mission -->
 
         <!-- floating-footer-form starts
     ============================================ -->
@@ -736,26 +657,12 @@
                                                 <label class="form-check-label" for="form-check-input-5">
                                                     <span>Social Media Marketing</span>
                                                 </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-6" name="multicheck[]" value="Email Marketing">
-                                                <label class="form-check-label" for="form-check-input-6">
-                                                    <span>Email Marketing</span>
-                                                </label>
-                                            </div>
+                                            </div>-
                                             <!-- End of .form-check -->
                                             <div class="form-check form-check-inline col-sm-6 col-xl-4">
                                                 <input class="form-check-input" type="checkbox" id="form-check-input-7" name="multicheck[]" value="Web Development">
                                                 <label class="form-check-label" for="form-check-input-7">
                                                     <span>Web Development</span>
-                                                </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-8" name="multicheck[]" value="Reporting">
-                                                <label class="form-check-label" for="form-check-input-8">
-                                                    <span>Reporting</span>
                                                 </label>
                                             </div>
                                             <!-- End of .form-check -->
@@ -777,17 +684,14 @@
                                 <div class="address">
                                     <address>
                                         <p>Location:
-                                            <span>Ap # 867-859 Sit Rd.
-                                                <br> Azusa New York 39531</span>
+                                            <span>6814 Lauderwick Ct
+                                                <br> Katy, TX - 77450</span>
                                         </p>
                                         <p>Phone:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
-                                        </p>
-                                        <p>Fax:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
+                                            <a href="tel:793151-6230">(225) 405-9790</a>
                                         </p>
                                         <p>Email:
-                                            <a href="mailto:support@domain.com">support@domain.com</a>
+                                            <a href="mailto:support@domain.com">Contact@webmarketingsolutions.com</a>
                                         </p>
                                     </address>
                                 </div>
