--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -73,7 +73,7 @@
     <div class="body-overlay"></div>
 
     <div class="p-ppc main">
-      <!-- fullscreen-menu starts
+     <!-- fullscreen-menu starts
     ============================================ -->
     <div class="fullscreen-menu text-right">
         <div class="container">
@@ -96,7 +96,7 @@
                             <div class="dropdown-menu" aria-labelledby="serviceDropdown">
                                 <a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a>
                                 <a class="dropdown-item" href="pay-per-click.html">Pay-Per-Click</a>
-                                <a class="dropdown-item" href="under-construction.html">Social Media Marketing</a>
+                                <a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a>
                                 <a class="dropdown-item" href="web-development.html">Web Development</a>
                             </div>
                         </li>
@@ -160,8 +160,8 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-sm-4 text-sm-left">
-                        <a class="navbar-brand" href="index.html">
-                            <p>Web Marketing Solutions</p>
+                        <a href="index.html">
+                          <img class="navbarLogo" src="./media/mainLogo.png" alt="">
                         </a>
                         <!-- End of .navbar-brand -->
                     </div>
@@ -200,7 +200,7 @@
                             <a class="nav-link" href="pay-per-click.html">Pay-Per-Click</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="under-construction.html">Social Media Marketing</a>
+                            <a class="nav-link" href="social-media-marketing.html">Social Media Marketing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="web-development.html">Web Development</a>
@@ -234,8 +234,8 @@
                     <!-- End of .breadcrumb-holder -->
 
                     <h1>Pay-Per-Click</h1>
-                    <p>It is a long established fact that a reader will be distracted by the readable
-                        <br> content of a page when looking at its layout</p>
+                    <p>Google Ads is the highest converting ads software ever
+                        <br> Wether your a startup or a massive corporation, you should be excelling on Googls Ads.</p>
                 </div>
                 <!-- End of .container -->
             </div>
@@ -249,7 +249,6 @@
             <div class="container">
                 <div class="section-heading text-center">
                     <h2>Reach the Right Audience at the <span>Right Time</span></h2>
-                    <p>Bring more traffic to your website with the help of proven techniques we can offer</p>
                 </div>
                 <!-- End of .section-heading -->
                 <p class="text-center">Organic search traffic from Google is free, and let’s face it, free is a pretty good price.  While this is very true, 
@@ -475,7 +474,7 @@
                                             </li>
                                             <li>
                                                 <i class="icon-Tick"></i>
-                                                <span>Bounce Rate Optimazation:</span> A high bounce rate could mean many things, we will deduce this abismal problem/
+                                                <span>Bounce Rate Optimazation:</span> A high bounce rate could mean many things, we will deduce this abismal problem
                                             </li>
                                         </ul>
                                     </div>
@@ -619,7 +618,7 @@
     <!-- End of .main -->
 
 
-    <!-- contact-form-modal starts
+<!-- contact-form-modal starts
     ============================================ -->
     <div class="footer-modal modal fade" id="contact-form-modal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel"
         aria-hidden="true">
@@ -691,26 +690,12 @@
                                                 <label class="form-check-label" for="form-check-input-5">
                                                     <span>Social Media Marketing</span>
                                                 </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-6" name="multicheck[]" value="Email Marketing">
-                                                <label class="form-check-label" for="form-check-input-6">
-                                                    <span>Email Marketing</span>
-                                                </label>
-                                            </div>
+                                            </div>-
                                             <!-- End of .form-check -->
                                             <div class="form-check form-check-inline col-sm-6 col-xl-4">
                                                 <input class="form-check-input" type="checkbox" id="form-check-input-7" name="multicheck[]" value="Web Development">
                                                 <label class="form-check-label" for="form-check-input-7">
                                                     <span>Web Development</span>
-                                                </label>
-                                            </div>
-                                            <!-- End of .form-check -->
-                                            <div class="form-check form-check-inline col-sm-6 col-xl-4">
-                                                <input class="form-check-input" type="checkbox" id="form-check-input-8" name="multicheck[]" value="Reporting">
-                                                <label class="form-check-label" for="form-check-input-8">
-                                                    <span>Reporting</span>
                                                 </label>
                                             </div>
                                             <!-- End of .form-check -->
@@ -732,17 +717,14 @@
                                 <div class="address">
                                     <address>
                                         <p>Location:
-                                            <span>Ap # 867-859 Sit Rd.
-                                                <br> Azusa New York 39531</span>
+                                            <span>6814 Lauderwick Ct
+                                                <br> Katy, TX - 77450</span>
                                         </p>
                                         <p>Phone:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
-                                        </p>
-                                        <p>Fax:
-                                            <a href="tel:793151-6230">(793) 151-6230</a>
+                                            <a href="tel:793151-6230">(225) 405-9790</a>
                                         </p>
                                         <p>Email:
-                                            <a href="mailto:support@domain.com">support@domain.com</a>
+                                            <a href="mailto:support@domain.com">Contact@webmarketingsolutions.com</a>
                                         </p>
                                     </address>
                                 </div>
